<resources>
    <string name="app_name">Tablet Comparison</string>
    <string name="action_settings">Settings</string>
    <string name="title">Compare Tablets</string>
    <string name="comparison_title">Your comparison</string>
    <string name="detail_title">Tablet Details</string>
    <string name="compare_button_text">Compare</string>
    <string name="close_button_text">Close</string>
    <string name="subtitle_text">Select 2 or 3 tablets below and press compare</string>
    <string name="comparison_subtitle_text">I have compared your selection</string>
    <string name="detail_subtitle_text">Please find the details below.</string>
    <string name="title_text">Tablet Comparison</string>
    <string name="comparison_title_text">Your comparison</string>
    <string name="detail_title_text">Tablet details</string>
    <string name="selection_text">Add to comparison</string>
    <string name="favorites_checkbox_text">Add to favorites</string>
    <string name="error_msgbox_title">Error</string>
    <string name="xml_error">The app could not import tablets from the XML file. The app will now exit.</string>
    <string name="msgbox_close_button_title">Close</string>
    <string name="width_abbreviation">W</string>
    <string name="height_abbreviation">H</string>
    <string name="not_enough_tablets_selected">You did not select 2 or more tablets to compare. That makes it sort of difficult for me to help you ;)</string>
    <string name="too_many_tablets_selected">Whoa! This is a bit much for me to handle. Please select only 2 or 3 tablets to compare.</string>
    <string name="title_activity_tablet_comparison">Your Comparison</string>
    <string name="title_tablet_recommendation">My recommendation</string>
    <string name="winning_tablet_text">This is the best tablet in this comparison. Scroll down to find out why.</string>
    <string name="equal_winning_tablet_text">This tablet got a good score in this comparison. Scroll down for further details.</string>
    <string name="reset_comparison_title">Clear selected tablets?</string>
    <string name="reset_comparison_msg">Would you like to clear all selected tablets in this comparison?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="title_activity_tablet_details">Tablet Details</string>
    <string name="cores_specification_name">Number of processor cores</string>
    <string name="cores_specification_units">Cores</string>
    <string name="clockspeed_specification_name">Processor clock speed</string>
    <string name="clockspeed_specification_units">Ghz</string>
    <string name="memory_specification_name">Available RAM</string>
    <string name="memory_specification_units">GB</string>
    <string name="storage_specification_name">Internal Storage</string>
    <string name="storage_specification_units">GB</string>
    <string name="price_specification_name">Price</string>
    <string name="price_specification_units">$</string>
    <string name="screen_specification_name">Screen diagonal</string>
    <string name="screen_specification_units">Inches</string>
    <string name="weight_specification_name">Weight</string>
    <string name="weight_specification_units">Gram</string>
    <string name="height_specification_name">Thickness</string>
    <string name="height_specification_units">MM</string>
    <string name="length_specification_name">Length</string>
    <string name="length_specification_units">MM</string>
    <string name="width_specification_name">Width</string>
    <string name="width_specification_units">MM</string>
    <string name="reswidth_specification_name">Resolution Width</string>
    <string name="reswidth_specification_units">Pixels</string>
    <string name="resheight_specification_name">Resolution Height</string>
    <string name="resheight_specification_units">Pixels</string>
    <string name="os_specification_name">Operating System Version</string>
    <string name="os_specification_units">Android</string>
    <string name="dimensions_specification_name">Dimensions</string>
    <string name="dimensions_specification_units_w">MM Width</string>
    <string name="dimensions_specification_units_l">MM Length</string>
    <string name="resolution_specification_name">Resolution</string>
    <string name="resolution_specification_units">Pixels</string>

</resources>
