<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UsedBooksFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/compare_button"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/subtitle_text"
        android:id="@+id/subtitle"
        android:layout_below="@+id/title"
        android:layout_marginBottom="@dimen/table_margin"
        android:layout_toLeftOf="@+id/compare_button"
        android:layout_alignParentLeft="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/subtitle">

        <TableLayout
            android:shrinkColumns="*"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/subtitle"
            android:layout_centerHorizontal="true"
            android:id="@+id/tabletTable">

        </TableLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/compare_button_text"
        android:id="@+id/compare_button"
        android:layout_alignParentEnd="false"
        android:layout_alignRight="@+id/scrollView" />

</RelativeLayout>
