<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".UsedBooksFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/detail_title_text"
        android:id="@+id/detail_title"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/detail_close_button"

        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/detail_subtitle_text"
        android:id="@+id/detail_subtitle"
        android:layout_below="@+id/detail_title"
        android:layout_marginBottom="@dimen/table_margin"
        android:layout_toLeftOf="@+id/detail_close_button"
        android:layout_alignParentLeft="true" />


    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/detail_scrollView"
        android:layout_below="@+id/detail_subtitle">

        <TableLayout
            android:shrinkColumns="*"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/detail_subtitle"
            android:layout_centerHorizontal="true"
            android:id="@+id/detailTable">

        </TableLayout>
    </ScrollView>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/close_button_text"
        android:id="@+id/detail_close_button"
        android:layout_alignParentEnd="true"
        android:layout_alignRight="@+id/detail_scrollView"
        android:layout_alignParentRight="false" />

</RelativeLayout>
